rnsc/test_data/rns_integration/error/parser/method_directive/missing_descriptor.rns
.class MissingMethodDescriptor
.super java/lang/Object

.method main
.method_end
.class_end
